[package]
name = "mvcc"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rayon = "1.1"
spinlock = {git = "https://github.com/zuoxiaoliang/spinlock.rs", rev = "61bad855"}

[dev-dependencies]
env_logger = "0.8"
